--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,6 @@
-Change log
-=========
+Change Log
+==========
 
-0.0.1(28th jan)
----------
-first release
+0.0.1 (19/04/2020)
+-------------------
+- First Release
